--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "next": "15.3.2",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
